Fix a broken link to the SVG. Remove a missing doc from the nav. sidebar and add a present doc. Add a helpful link to the decision chart docs where they are mentioned.

--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -63,6 +63,7 @@
             <li><a href="{{site.url}}tutorial/conneg.html">Content Negotiation</a></li>
             <li><a href="{{site.url}}tutorial/conditional.html">Conditional Requests</a></li>
             <li><a href="{{site.url}}tutorial/post-et-al.html">Handling POST, et al.</a></li>
+            <li><a href="{{site.url}}tutorial/all-together.html">Putting it all together</a></li>
             <li class="nav-header">Documentation</li>
             <li data-section="definition"><a href="{{site.url}}doc/resource-definition.html">
                 Resource definition</a></li>    
@@ -78,8 +79,10 @@
                 Handlers</a></li>
             <li data-section="debug"><a href="{{site.url}}doc/debugging.html">
                 Debugging</a></li>
+            <!-- Doesn't exist yet
             <li data-section="integration"><a href="{{site.url}}doc/integration.html">
                 Integration</a></li>
+            -->
             <li class="nav-header">Support</li>
             <li><a href="{{site.url}}faq.html">FAQ</a></li>
             <li><a href="{{site.url}}google-group.html">Google
